# RadFiled3D

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: package-test-publish.yml
build_tools/: radfiled3d_version.py
examples/cxx/: example01.cpp
examples/python/: example01.py  example02.py  example03.py
include/RadFiled3D/: GridTracer.hpp  PolarSegments.hpp  RadiationField.hpp  Voxel.hpp  VoxelBuffer.hpp  VoxelGrid.hpp
include/RadFiled3D/dataset/: helpers.hpp
include/RadFiled3D/helpers/: FileLock.hpp  Typing.hpp
include/RadFiled3D/storage/: FieldAccessor.hpp  FieldSerializer.hpp  MetadataAccessor.hpp  MetadataSerializer.hpp  RadiationFieldStore.hpp  Registry.hpp  Types.hpp
python/RadFiled3D/: RadFiled3D.pyi  __init__.py
python/RadFiled3D/metadata/: v1.py
python/RadFiled3D/pytorch/: helpers.py  radiationfieldloader.py  types.py
python/RadFiled3D/pytorch/datasets/: base.py  cartesian.py  polar.py  radfield3d.py
python/bindings/: bindings.cpp
python/stubs/: RadFiled3D.pyi
src/: FieldAccessor.cpp  FieldSerializer.cpp  FileLock.cpp  RadiationFieldStore.cpp  StorageRegistry.cpp  Typing.cpp  VoxelBuffer.cpp
tests/: accessor_test.cpp  basic.cpp  memory_test.cpp  spherical_test.cpp  test_dataloading.py  test_datasets.py  test_field_accessor.py  test_spherical.py
tools/: render_field.py
